# minecraft

./: .gitignore  .gitmodules  CMakeLists.txt  build.bat  build.sh  minecraft.sln
.github/workflows/: codacy-analysis.yml  codeql-analysis.yml
libs/: CMakeLists.txt
minecraft/: Block.h  Camera.cpp  Camera.h  Input.h  Interface.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  PerlinNoise.h  Player.h  Source.cpp  TextureLoader.h  World.h  cubeShader.frag  cubeShader.vert  glad.c  hoverShader.frag  minecraft.vcxproj  minecraft.vcxproj.filters  stb_image.h
minecraft/blocks/: BLOCKS_MANIFEST
minecraft/blocks/minecraft/: bedrock.block  example  stone.block
minecraft/resources/minecraft/: dirt.block  grass.block  stone.block
minecraft/shaders/: cubeShader.frag  inventoryShader.vert
resources/data/minecraft/: air  bedrock  dirt  example.yml  grass  stone
resources/minecraft/: example
resources/minecraft/gui/blocks/: desktop.ini
resources/shaders/: inventoryShader.frag
src/: Block.h  Camera.cpp  Camera.h  Input.h  Interface.h  PerlinNoise.h  Player.h  Shader.cpp  Shader.h  Source.cpp  TextureLoader.h  World.h  main.cpp
src/inc/: Config.cpp  Config.hpp  Shader.cpp  Shader.hpp  config.hpp  shader.cpp  shader.hpp
src/inc/Parser/: Ini.cpp  Ini.hpp
src/inc/Parser/Yaml/: Yaml.cpp  Yaml.hpp
src/inc/Resources/: BaseResource.hpp  Directory.cpp  Directory.hpp  Entry.cpp  Entry.hpp  File.cpp  File.hpp  Resources.cpp  Resources.hpp  __ResourceFilePointer.hpp  pack.cpp  pack.hpp
src/inc/Utils/: Utils.hpp
src/inc/Yaml/: Yaml.cpp  Yaml.hpp
src/inc/parsers/: Ini.cpp  Ini.hpp  ini.cpp  ini.hpp
src/inc/parsers/yaml/: yaml.cpp  yaml.hpp
src/inc/resources/: __resource-file-ptr.hpp  entry.cpp  entry.hpp  pack.cpp  pack.hpp  resources.cpp  resources.hpp
src/inc/utils/: Image.hpp  image.hpp  nbt.hpp  rectangle-packer.h  texture-combiner.hpp  utils.hpp
src/minecraft/: CMakeLists.txt  Camera.h  Shader.cpp  TextureLoader.h  World.h  main.cpp
src/minecraft/core/: block-base.hpp  block.hpp  core.cpp  core.hpp  item-base.hpp
src/minecraft/core/interfaces/: initializable.hpp  tile-entity.hpp  updatable.hpp
src/packer/: CMakeLists.txt  main.cpp
src/shaders/: hoverShader.frag
src/tests/: CMakeLists.txt  TestConfig.cpp  TestIni.cpp  TestResources.cpp  TestShader.cpp  TestYamlParser.cpp  Utils.cpp  Utils.hpp  pch.h  test-ini.cpp  test-resources.cpp  test-shader.cpp  test-yaml-parser.cpp  test.cpp  utils.cpp  utils.hpp
src/tests/TestShader/: test.frag  test.geom  test.vert
tests/: test.cpp
