option(test "build all tests." ON)
if(test)
  set(TEST_SOURCES ${SOURCES})
  list(FILTER TEST_SOURCES INCLUDE REGEX "${SRC_DIR}/tests/*")
  set(INC_SOURCES ${SOURCES})
  list(FILTER INC_SOURCES INCLUDE REGEX "${SRC_DIR}/inc/*")
  add_executable(runUnitTests ${TEST_SOURCES} ${INC_SOURCES})
  target_link_libraries(runUnitTests gtest gtest_main)
  target_add_libraries(runUnitTests "glm" "gtest")
  target_include_directories(runUnitTests PRIVATE "${INC_DIR}")
  target_include_directories(runUnitTests PRIVATE "${SRC_DIR}/tests")

  add_test(NAME TEST COMMAND runUnitTests)

endif()
